<resources>
    <string name="app_name">شوفنا</string>
    <string name="main">Home</string>
    <string name="favourite">Favourite</string>
    <string name="more">More</string>
    <string name="cart">Cart</string>
    <string name="ar">ar</string>
    <string name="related">Related News</string>
    <string name="contact">Contact Us</string>
    <string name="aboutus">About Us</string>

    <string name="login">Login</string>
    <string name="forgetPW">Forgot Password</string>

    <string name="department">department </string>
<string name="notification">notification</string>
    <string name="logout">Logout</string>
    <string name="editprofile">Edit Your Profile</string>
    <string name="editpw">Change Your Password</string>

    <string name="register">register</string>
    <string name="edit_info">Edit Profile</string>
    <string name="mobile">Mobile Phone </string>
    <string name="email">Email</string>

    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>


</resources>