<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/home"
        android:icon="@drawable/house"
        android:title="@string/main"
        app:cnb_iconTintMode="src_in"
        app:cnb_iconColor="@color/activity"/>
    <item
        android:id="@+id/departments"
        android:icon="@drawable/news"
        android:title="@string/department"
        app:cnb_iconTintMode="src_in"
        app:cnb_iconColor="@color/activity"/>
    <item
        android:id="@+id/notification"
        android:icon="@drawable/notification"
        android:title="@string/notification"
        app:cnb_iconTintMode="src_in"
        app:cnb_iconColor="@color/activity"/>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        android:title="@string/more"
        app:cnb_iconColor="@color/activity" />
</menu>