<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/kokn"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                app:layout_constraintGuide_percent="0.1"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guid3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.35"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextField"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/linear_background_for_login"
                android:gravity="center"
                android:hint="@string/username"
                android:inputType="text"
                android:layout_marginTop="8dp"
                style="@style/LoginTextStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guid"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintWidth_percent="0.85">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    style="@style/LoginTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:textColorHint="@color/gray"
                    android:gravity="center" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordfilledTextField"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/linear_background_for_login"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guid3"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintWidth_percent="0.85">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    style="@style/LoginTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/forgetPW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/topicTitleTextStyle"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/kokn"
                android:text="@string/forgetPW"
                android:gravity="center"
                android:visibility="visible"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordfilledTextField" />


            <TextView
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_height="45dp"
                style="@style/LoginTextStyle"
                android:layout_marginTop="32dp"
                android:background="@drawable/bottom_rounded"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/login"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgetPW"
                app:layout_constraintWidth_percent="0.45" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>