<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/kokn"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">





            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextField"
                style="@style/LoginTextStyle"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/linear_background_for_login"
                android:gravity="center"
                android:hint="@string/username"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.85">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    style="@style/LoginTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:textColorHint="@color/gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phonenimerfield"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/linear_background_for_login"
                android:gravity="center"
                android:hint="@string/mobile"
                android:inputType="textPassword"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filledTextField"
                app:layout_constraintWidth_percent="0.85">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobile"
                    style="@style/LoginTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailfilledTextField"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/linear_background_for_login"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textPassword"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phonenimerfield"
                app:layout_constraintWidth_percent="0.85">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    style="@style/LoginTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordfilledTextField"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/linear_background_for_login"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintBottom_toTopOf="@+id/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailfilledTextField"
                app:layout_constraintWidth_percent="0.85">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    style="@style/LoginTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/gotoregister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/kokn"
                android:gravity="center"
                android:visibility="gone"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordfilledTextField" />


            <TextView
                android:id="@+id/register"
                style="@style/LoginTextStyle"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:background="@drawable/bottom_rounded"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/register"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintWidth_percent="0.45"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <FrameLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>